Fixing spelling and spacing. Adding a few more factoids.

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -27,6 +27,7 @@ a:hover, a:active, a:focus {
   display: inline-block;
   text-align: start;
   max-width: 750px;
+  margin: 20px;
 }
 
 #name {
@@ -61,6 +62,8 @@ a:hover, a:active, a:focus {
 
 #social-icons {
   height: 80px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .social-slide {
